added errors, added config, finished service layer logic, added unique index.
